--- a/models/transformer/bcam_test_3op_flir_p5_aligned.yaml
+++ b/models/transformer/bcam_test_3op_flir_p5_aligned.yaml
@@ -56,30 +56,30 @@ backbone:
 head:
   [
     # P5 path
-    [20, 1, Conv, [512, 1, 1]],                  # 23: from BCAM P5 (20×20), 3072→512 (parser sets in_ch)
-    [-1, 1, nn.Upsample, [None, 2, 'nearest']],  # 24: 20→40
+    [20, 1, Conv, [512, 1, 1]],                  # 21: from BCAM P5 (20×20), 3072→512 (parser sets in_ch)
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']],  # 22: 20→40
 
     # P4 path
-    [6, 1, Conv, [512, 1, 1]],                   # 25: RGB P4 (40×40)
-    [[-1, -2], 1, Concat, [1]],                  # 26: 40×40 concat
-    [-1, 3, C3, [512, False]],                   # 27: P4 out (40×40)
+    [6, 1, Conv, [512, 1, 1]],                   # 23: RGB P4 (40×40)
+    [[-1, -2], 1, Concat, [1]],                  # 24: 40×40 concat
+    [-1, 3, C3, [512, False]],                   # 25: P4 out (40×40)
 
     # P3 path
-    [-1, 1, Conv, [256, 1, 1]],                  # 28: 512→256
-    [-1, 1, nn.Upsample, [None, 2, 'nearest']],  # 29: 40→80
-    [4, 1, Conv, [256, 1, 1]],                   # 30: RGB P3 (80×80)
-    [[-1, -2], 1, Concat, [1]],                  # 31: 80×80 concat
-    [-1, 3, C3, [256, False]],                   # 32: P3 out (80×80)
+    [-1, 1, Conv, [256, 1, 1]],                  # 26: 512→256
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']],  # 27: 40→80
+    [4, 1, Conv, [256, 1, 1]],                   # 28: RGB P3 (80×80)
+    [[-1, -2], 1, Concat, [1]],                  # 29: 80×80 concat
+    [-1, 3, C3, [256, False]],                   # 30: P3 out (80×80)
 
     # Downsample back to P4 and fuse with P4 path
-    [-1, 1, Conv, [256, 3, 2]],                  # 33: 80→40
-    [[-1, 27], 1, Concat, [1]],                  # 34: concat with P4 out (layer 27, 40×40)
-    [-1, 3, C3, [512, False]],                   # 35: final P4 (40×40)
+    [-1, 1, Conv, [256, 3, 2]],                  # 31: 80→40
+    [[-1, 27], 1, Concat, [1]],                  # 32: concat with P4 out (layer 27, 40×40)
+    [-1, 3, C3, [512, False]],                   # 33: final P4 (40×40)
 
     # Downsample to P5 and fuse with P5 path (pre-upsample)
-    [-1, 1, Conv, [512, 3, 2]],                  # 36: 40→20
-    [[-1, 23], 1, Concat, [1]],                  # 37: concat with layer 23 (P5 proj, 20×20)
-    [-1, 3, C3, [1024, False]],                  # 38: final P5 (20×20)
+    [-1, 1, Conv, [512, 3, 2]],                  # 34: 40→20
+    [[-1, 23], 1, Concat, [1]],                  # 35: concat with layer 23 (P5 proj, 20×20)
+    [-1, 3, C3, [1024, False]],                  # 36: final P5 (20×20)
 
-    [[32, 35, 38], 1, Detect, [nc, anchors]],    # 39: Detect [P3,P4,P5]
+    [[30, 33, 36], 1, Detect, [nc, anchors]],    # Detect [P3,P4,P5]  # 39: Detect [P3,P4,P5]
   ]
