--- a/models/transformer/bcam_test_3op_flir_p5_aligned.yaml
+++ b/models/transformer/bcam_test_3op_flir_p5_aligned.yaml
@@ -1,85 +1,69 @@
 # Single-Scale BCAM Fusion at P5
-# Clean comparison architecture - fusion only at highest semantic level
+nc: 3
+depth_multiple: 1.00
+width_multiple: 1.00
 
-# parameters
-nc: 3  # number of classes
-depth_multiple: 1.00  # model depth multiple
-width_multiple: 1.00  # layer channel multiple
-
-# anchors
 anchors:
-  - [10,13, 16,30, 33,23]   # P3/8
-  - [30,61, 62,45, 59,119]  # P4/16
-  - [116,90, 156,198, 373,326]  # P5/32
+  - [10,13, 16,30, 33,23]
+  - [30,61, 62,45, 59,119]
+  - [116,90, 156,198, 373,326]
 
-# YOLOv5 backbone with single-scale BCAM fusion
 backbone:
-  # [from, number, module, args]
   [
-    ######### RGB Stream (Independent Processing) #############
-    [-1, 1, Focus, [64, 3]],        # 0-P1/2 RGB input
-    [-1, 1, Conv, [128, 3, 2]],     # 1-P2/4 RGB
-    [-1, 3, C3, [128]],             # 2-P2/4 RGB features
-    [-1, 1, Conv, [256, 3, 2]],     # 3-P3/8 RGB
-    [-1, 9, C3, [256]],             # 4-P3/8 RGB features
-    [-1, 1, Conv, [512, 3, 2]],     # 5-P4/16 RGB
-    [-1, 9, C3, [512]],             # 6-P4/16 RGB features
-    [-1, 1, Conv, [1024, 3, 2]],    # 7-P5/32 RGB
-    [-1, 1, SPP, [1024, [5, 9, 13]]], # 8-P5/32 RGB spatial pyramid
-    [-1, 3, C3, [1024, False]],     # 9-P5/32 RGB final features
+    # RGB Stream
+    [-1, 1, Focus, [64, 3]],              # 0
+    [-1, 1, Conv, [128, 3, 2]],           # 1
+    [-1, 3, C3, [128]],                   # 2
+    [-1, 1, Conv, [256, 3, 2]],           # 3
+    [-1, 9, C3, [256]],                   # 4 - P3
+    [-1, 1, Conv, [512, 3, 2]],           # 5
+    [-1, 9, C3, [512]],                   # 6 - P4
+    [-1, 1, Conv, [1024, 3, 2]],          # 7
+    [-1, 1, SPP, [1024, [5, 9, 13]]],     # 8
+    [-1, 3, C3, [1024, False]],           # 9 - P5 RGB
 
-    ######### Thermal Stream (Independent Processing) #############
-    [-4, 1, Focus, [64, 3]],        # 10-P1/2 Thermal input (-4 = thermal input)
-    [-1, 1, Conv, [128, 3, 2]],     # 11-P2/4 Thermal
-    [-1, 3, C3, [128]],             # 12-P2/4 Thermal features
-    [-1, 1, Conv, [256, 3, 2]],     # 13-P3/8 Thermal
-    [-1, 9, C3, [256]],             # 14-P3/8 Thermal features
-    [-1, 1, Conv, [512, 3, 2]],     # 15-P4/16 Thermal
-    [-1, 9, C3, [512]],             # 16-P4/16 Thermal features
-    [-1, 1, Conv, [1024, 3, 2]],    # 17-P5/32 Thermal
-    [-1, 1, SPP, [1024, [5, 9, 13]]], # 18-P5/32 Thermal spatial pyramid
-    [-1, 3, C3, [1024, False]],     # 19-P5/32 Thermal final features
+    # Thermal Stream
+    [-4, 1, Focus, [64, 3]],              # 10
+    [-1, 1, Conv, [128, 3, 2]],           # 11
+    [-1, 3, C3, [128]],                   # 12
+    [-1, 1, Conv, [256, 3, 2]],           # 13
+    [-1, 9, C3, [256]],                   # 14 - P3
+    [-1, 1, Conv, [512, 3, 2]],           # 15
+    [-1, 9, C3, [512]],                   # 16 - P4
+    [-1, 1, Conv, [1024, 3, 2]],          # 17
+    [-1, 1, SPP, [1024, [5, 9, 13]]],     # 18
+    [-1, 3, C3, [1024, False]],           # 19 - P5 Thermal
 
-    ######### SINGLE FUSION POINT - P5 BCAM #############
-    [[9,19], 1, BCAM, [1024]],      # 20: Bidirectional cross-attention at P5
-                                     # Input: (RGB_P5, Thermal_P5)
-                                     # Output: (rgb_enhanced, thermal_enhanced, fused)
-
-    ######### Post-Fusion Processing #############
-    # Use fused output for detection pathway
-    # Note: BCAM returns 3-tuple, we need to extract fused output [2]
-    # This will be handled in the forward pass or with a selection module
+    # Fusion
+    [[9,19], 1, BCAM, [1024]],            # 20 - P5 fused (outputs 3072 ch)
   ]
 
-# YOLOv5 head - Modified to work with single fused backbone
-# --- HEAD (global layers start after backbone 0..22) ---
 head:
   [
-    # P5 path
-    [20, 1, Conv, [512, 1, 1]],                  # 21: from BCAM P5 (20×20), 3072→512 (parser sets in_ch)
-    [-1, 1, nn.Upsample, [None, 2, 'nearest']],  # 22: 20→40
+    # P5 processing
+    [20, 1, Conv, [512, 1, 1]],           # 21 - project 3072→512
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']], # 22 - upsample to 40×40
 
     # P4 path
-    [6, 1, Conv, [512, 1, 1]],                   # 23: RGB P4 (40×40)
-    [[-1, -2], 1, Concat, [1]],                  # 24: 40×40 concat
-    [-1, 3, C3, [512, False]],                   # 25: P4 out (40×40)
-
+    [6, 1, Conv, [512, 1, 1]],            # 23 - RGB P4 features
+    [[-1, 22], 1, Concat, [1]],           # 24 - concat P4 + upsampled P5
+    [-1, 3, C3, [512, False]],            # 25 - P4 output
+    
     # P3 path
-    [-1, 1, Conv, [256, 1, 1]],                  # 26: 512→256
-    [-1, 1, nn.Upsample, [None, 2, 'nearest']],  # 27: 40→80
-    [4, 1, Conv, [256, 1, 1]],                   # 28: RGB P3 (80×80)
-    [[-1, -2], 1, Concat, [1]],                  # 29: 80×80 concat
-    [-1, 3, C3, [256, False]],                   # 30: P3 out (80×80)
+    [25, 1, Conv, [256, 1, 1]],           # 26 - project 512→256
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']], # 27 - upsample to 80×80
+    [4, 1, Conv, [256, 1, 1]],            # 28 - RGB P3 features
+    [[-1, 27], 1, Concat, [1]],           # 29 - concat P3 + upsampled P4
+    [-1, 3, C3, [256, False]],            # 30 - P3 output (detection)
 
-    # Downsample back to P4 and fuse with P4 path
-    [-1, 1, Conv, [256, 3, 2]],                  # 31: 80→40
-    [[-1, 27], 1, Concat, [1]],                  # 32: concat with P4 out (layer 27, 40×40)
-    [-1, 3, C3, [512, False]],                   # 33: final P4 (40×40)
+    # Bottom-up path
+    [30, 1, Conv, [256, 3, 2]],           # 31 - downsample P3→P4
+    [[-1, 25], 1, Concat, [1]],           # 32 - concat with P4 path
+    [-1, 3, C3, [512, False]],            # 33 - P4 output (detection)
 
-    # Downsample to P5 and fuse with P5 path (pre-upsample)
-    [-1, 1, Conv, [512, 3, 2]],                  # 34: 40→20
-    [[-1, 23], 1, Concat, [1]],                  # 35: concat with layer 23 (P5 proj, 20×20)
-    [-1, 3, C3, [1024, False]],                  # 36: final P5 (20×20)
+    [33, 1, Conv, [512, 3, 2]],           # 34 - downsample P4→P5
+    [[-1, 21], 1, Concat, [1]],           # 35 - concat with P5 path
+    [-1, 3, C3, [1024, False]],           # 36 - P5 output (detection)
 
-    [[30, 33, 36], 1, Detect, [nc, anchors]],    # Detect [P3,P4,P5]  # 39: Detect [P3,P4,P5]
+    [[30, 33, 36], 1, Detect, [nc, anchors]], # 37 - Detect
   ]
