--- a/models/transformer/bcam_test_3op_flir_allp3p4p5.yaml
+++ b/models/transformer/bcam_test_3op_flir_allp3p4p5.yaml
@@ -1,90 +1,71 @@
-# Single-Scale BCAM Fusion at P5
-# Clean comparison architecture - fusion only at highest semantic level
+# Multi-Scale BCAM Fusion
+nc: 3
+depth_multiple: 1.00
+width_multiple: 1.00
 
-# parameters
-nc: 3  # number of classes
-depth_multiple: 1.00  # model depth multiple
-width_multiple: 1.00  # layer channel multiple
-
-# anchors
 anchors:
-  - [10,13, 16,30, 33,23]   # P3/8
-  - [30,61, 62,45, 59,119]  # P4/16
-  - [116,90, 156,198, 373,326]  # P5/32
+  - [10,13, 16,30, 33,23]
+  - [30,61, 62,45, 59,119]
+  - [116,90, 156,198, 373,326]
 
-# YOLOv5 backbone with single-scale BCAM fusion
 backbone:
-  # [from, number, module, args]
   [
-    ######### RGB Stream (Independent Processing) #############
-    [-1, 1, Focus, [64, 3]],        # 0-P1/2 RGB input
-    [-1, 1, Conv, [128, 3, 2]],     # 1-P2/4 RGB
-    [-1, 3, C3, [128]],             # 2-P2/4 RGB features
-    [-1, 1, Conv, [256, 3, 2]],     # 3-P3/8 RGB
-    [-1, 9, C3, [256]],             # 4-P3/8 RGB features
-    [-1, 1, Conv, [512, 3, 2]],     # 5-P4/16 RGB
-    [-1, 9, C3, [512]],             # 6-P4/16 RGB features
-    [-1, 1, Conv, [1024, 3, 2]],    # 7-P5/32 RGB
-    [-1, 1, SPP, [1024, [5, 9, 13]]], # 8-P5/32 RGB spatial pyramid
-    [-1, 3, C3, [1024, False]],     # 9-P5/32 RGB final features
+    # RGB Stream
+    [-1, 1, Focus, [64, 3]],              # 0
+    [-1, 1, Conv, [128, 3, 2]],           # 1
+    [-1, 3, C3, [128]],                   # 2
+    [-1, 1, Conv, [256, 3, 2]],           # 3
+    [-1, 9, C3, [256]],                   # 4 - RGB P3
+    [-1, 1, Conv, [512, 3, 2]],           # 5
+    [-1, 9, C3, [512]],                   # 6 - RGB P4
+    [-1, 1, Conv, [1024, 3, 2]],          # 7
+    [-1, 1, SPP, [1024, [5, 9, 13]]],     # 8
+    [-1, 3, C3, [1024, False]],           # 9 - RGB P5
 
-    ######### Thermal Stream (Independent Processing) #############
-    [-4, 1, Focus, [64, 3]],        # 10-P1/2 Thermal input (-4 = thermal input)
-    [-1, 1, Conv, [128, 3, 2]],     # 11-P2/4 Thermal
-    [-1, 3, C3, [128]],             # 12-P2/4 Thermal features
-    [-1, 1, Conv, [256, 3, 2]],     # 13-P3/8 Thermal
-    [-1, 9, C3, [256]],             # 14-P3/8 Thermal features
-    [-1, 1, Conv, [512, 3, 2]],     # 15-P4/16 Thermal
-    [-1, 9, C3, [512]],             # 16-P4/16 Thermal features
-    [-1, 1, Conv, [1024, 3, 2]],    # 17-P5/32 Thermal
-    [-1, 1, SPP, [1024, [5, 9, 13]]], # 18-P5/32 Thermal spatial pyramid
-    [-1, 3, C3, [1024, False]],     # 19-P5/32 Thermal final features
+    # Thermal Stream
+    [-4, 1, Focus, [64, 3]],              # 10
+    [-1, 1, Conv, [128, 3, 2]],           # 11
+    [-1, 3, C3, [128]],                   # 12
+    [-1, 1, Conv, [256, 3, 2]],           # 13
+    [-1, 9, C3, [256]],                   # 14 - Thermal P3
+    [-1, 1, Conv, [512, 3, 2]],           # 15
+    [-1, 9, C3, [512]],                   # 16 - Thermal P4
+    [-1, 1, Conv, [1024, 3, 2]],          # 17
+    [-1, 1, SPP, [1024, [5, 9, 13]]],     # 18
+    [-1, 3, C3, [1024, False]],           # 19 - Thermal P5
 
-    ######### SINGLE FUSION POINT - P5 BCAM #############
-    [[9,19], 1, BCAM, [1024]],      # 20: Bidirectional cross-attention at P5
-                                     # Input: (RGB_P5, Thermal_P5)
-                                     # Output: (rgb_enhanced, thermal_enhanced, fused)
-    [[6, 16], 1, BCAM, [512]],       # 21: Bidirectional cross-attention at P4
-                                     # Input: (RGB_P4, Thermal_P4)
-                                     # Output: (rgb_enhanced, thermal_enhanced, fused)
-    [[4, 14], 1, BCAM, [256]],       # 22: Bidirectional cross-attention at P3
-                                     # Input: (RGB_P3, Thermal_P3)
-                                     # Output: (rgb_enhanced, thermal_enhanced, fused)
-
-    ######### Post-Fusion Processing #############
-    # Use fused output for detection pathway
-    # Note: BCAM returns 3-tuple, we need to extract fused output [2]
-    # This will be handled in the forward pass or with a selection module
+    # Multi-scale fusion
+    [[9,19], 1, BCAM, [1024]],            # 20 - P5 fused (3072 ch)
+    [[6,16], 1, BCAM, [512]],             # 21 - P4 fused (1536 ch)
+    [[4,14], 1, BCAM, [256]],             # 22 - P3 fused (768 ch)
   ]
 
-# YOLOv5 head - Modified to work with single fused backbone
-# --- HEAD (global layers start after backbone 0..22) ---
 head:
   [
-    # P5 path - start from BCAM P5
-    [20, 1, Conv, [512, 1, 1]],                  # 23: P5 BCAM (3072→512)
-    [-1, 1, nn.Upsample, [None, 2, 'nearest']],  # 24: Upsample to P4 size
+    # P5 path
+    [20, 1, Conv, [512, 1, 1]],           # 23 - project P5: 3072→512
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']], # 24 - upsample to 40×40
     
-    # P4 path - use BCAM P4
-    [21, 1, Conv, [512, 1, 1]],                  # 25: P4 BCAM (1536→512)
-    [[-1, -2], 1, Concat, [1]],                  # 26: Concat upsampled P5 + P4
-    [-1, 3, C3, [512, False]],                   # 27: Process P4
+    # P4 path
+    [21, 1, Conv, [512, 1, 1]],           # 25 - project P4: 1536→512
+    [[-1, 24], 1, Concat, [1]],           # 26 - concat P4 + upsampled P5
+    [-1, 3, C3, [512, False]],            # 27 - process P4
     
-    # P3 path - use BCAM P3
-    [-1, 1, Conv, [256, 1, 1]],                  # 28: 512→256
-    [-1, 1, nn.Upsample, [None, 2, 'nearest']],  # 29: Upsample to P3 size
-    [22, 1, Conv, [256, 1, 1]],                  # 30: P3 BCAM (768→256)
-    [[-1, -2], 1, Concat, [1]],                  # 31: Concat upsampled P4 + P3
-    [-1, 3, C3, [256, False]],                   # 32: Process P3
+    # P3 path
+    [27, 1, Conv, [256, 1, 1]],           # 28 - project: 512→256
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']], # 29 - upsample to 80×80
+    [22, 1, Conv, [256, 1, 1]],           # 30 - project P3: 768→256
+    [[-1, 29], 1, Concat, [1]],           # 31 - concat P3 + upsampled P4
+    [-1, 3, C3, [256, False]],            # 32 - P3 output (for detection)
     
     # Downsample path
-    [-1, 1, Conv, [256, 3, 2]],                  # 33: P3→P4 downsample
-    [[-1, 27], 1, Concat, [1]],                  # 34: Concat with P4 path
-    [-1, 3, C3, [512, False]],                   # 35: Final P4
+    [32, 1, Conv, [256, 3, 2]],           # 33 - P3→P4 downsample
+    [[-1, 27], 1, Concat, [1]],           # 34 - concat with P4 path
+    [-1, 3, C3, [512, False]],            # 35 - P4 output (for detection)
     
-    [-1, 1, Conv, [512, 3, 2]],                  # 36: P4→P5 downsample
-    [[-1, 23], 1, Concat, [1]],                  # 37: Concat with P5 path
-    [-1, 3, C3, [1024, False]],                  # 38: Final P5
+    [35, 1, Conv, [512, 3, 2]],           # 36 - P4→P5 downsample
+    [[-1, 23], 1, Concat, [1]],           # 37 - concat with P5 path
+    [-1, 3, C3, [1024, False]],           # 38 - P5 output (for detection)
     
-    [[32, 35, 38], 1, Detect, [nc, anchors]],    # 39: Detect
+    [[32, 35, 38], 1, Detect, [nc, anchors]], # 39
   ]
