--- a/models/transformer/bcam_objectness.yaml
+++ b/models/transformer/bcam_objectness.yaml
@@ -1,100 +1,90 @@
+
 nc: 3
 depth_multiple: 1.00
 width_multiple: 1.00
-
 anchors:
-  - [
-      [1.83806312084198, 2.516303062438965],
-      [1.9103686809539795, 4.661590576171875],
-      [4.1308770179748535, 4.19779109954834],
-    ] # P3/8
-  - [
-      [1.4039652347564697, 4.0962018966674805],
-      [3.652345657348633, 3.49937105178833],
-      [2.425184726715088, 6.970077037811279],
-    ] # P4/16
-  - [
-      [3.268796920776367, 3.013629913330078],
-      [2.503877639770508, 6.729071140289307],
-      [6.128988742828369, 5.503815650939941],
-    ] # P5/32
+  - [14.7,20.1, 15.3,37.3, 33.0,33.6]        # P3 / 8
+  - [22.5,65.5, 58.4,56.0, 38.8,111.5]       # P4 / 16
+  - [104.6,96.4, 80.1,215.3, 196.1,176.1]    # P5 / 32
 
-backbone: [
+backbone:
+  [
     ######### Dual Streams #############
     # RGB Stream
-    [-1, 1, Focus, [64, 3]], # 0
-    [-1, 1, Conv, [128, 3, 2]], # 1
-    [-1, 3, C3, [128]], # 2
-    [-1, 1, Conv, [256, 3, 2]], # 3
-    [-1, 9, C3, [256]], # 4  # RGB P3
-    [-1, 1, Conv, [512, 3, 2]], # 5
-    [-1, 9, C3, [512]], # 6  # RGB P4
-    [-1, 1, Conv, [1024, 3, 2]], # 7
+    [-1, 1, Focus, [64, 3]],        # 0
+    [-1, 1, Conv, [128, 3, 2]],     # 1
+    [-1, 3, C3, [128]],             # 2
+    [-1, 1, Conv, [256, 3, 2]],     # 3
+    [-1, 9, C3, [256]],             # 4  # RGB P3
+    [-1, 1, Conv, [512, 3, 2]],     # 5
+    [-1, 9, C3, [512]],             # 6  # RGB P4
+    [-1, 1, Conv, [1024, 3, 2]],    # 7
     [-1, 1, SPP, [1024, [5, 9, 13]]], # 8
-    [-1, 3, C3, [1024, False]], # 9  # RGB P5
+    [-1, 3, C3, [1024, False]],     # 9  # RGB P5
 
     # Thermal Stream
-    [-4, 1, Focus, [64, 3]], # 10
-    [-1, 1, Conv, [128, 3, 2]], # 11
-    [-1, 3, C3, [128]], # 12
-    [-1, 1, Conv, [256, 3, 2]], # 13
-    [-1, 9, C3, [256]], # 14 # Thermal P3
-    [-1, 1, Conv, [512, 3, 2]], # 15
-    [-1, 9, C3, [512]], # 16 # Thermal P4
-    [-1, 1, Conv, [1024, 3, 2]], # 17
+    [-4, 1, Focus, [64, 3]],        # 10
+    [-1, 1, Conv, [128, 3, 2]],     # 11
+    [-1, 3, C3, [128]],             # 12
+    [-1, 1, Conv, [256, 3, 2]],     # 13
+    [-1, 9, C3, [256]],             # 14 # Thermal P3
+    [-1, 1, Conv, [512, 3, 2]],     # 15
+    [-1, 9, C3, [512]],             # 16 # Thermal P4
+    [-1, 1, Conv, [1024, 3, 2]],    # 17
     [-1, 1, SPP, [1024, [5, 9, 13]]], # 18
-    [-1, 3, C3, [1024, False]], # 19 # Thermal P5
+    [-1, 3, C3, [1024, False]],     # 19 # Thermal P5
 
     ######### SCP + Self-Attention + Modality Gating #############
-
+    
     # P5: Self-attention + Modality gating + Cross-attention
-    [[9, 19], 1, BCAM_TrueSelfAttention_ModalityGated, [1024]], # 20
-
+    [[9,19], 1, BCAM_TrueSelfAttention_ModalityGated, [1024]], # 20
+    
     # P5 → P4 SCP context
-    [20, 1, Conv, [64, 1, 1]], # 21
-    [[20, 21], 1, SCP_Enhanced_Upsample, [64]], # 22
-
+    [20, 1, Conv, [64, 1, 1]],                      # 21
+    [[20, 21], 1, SCP_Enhanced_Upsample, [64]],     # 22
+    
     # P4: Context + Self-attention + Modality gating + Cross-attention
-    [[6, 22], 1, Concat, [1]], # 23: RGB + ctx
-    [23, 1, Conv, [512, 1, 1]], # 24
-    [[16, 22], 1, Concat, [1]], # 25: Thermal + ctx
-    [25, 1, Conv, [512, 1, 1]], # 26
+    [[6, 22], 1, Concat, [1]],                      # 23: RGB + ctx
+    [23, 1, Conv, [512, 1, 1]],                     # 24
+    [[16, 22], 1, Concat, [1]],                     # 25: Thermal + ctx
+    [25, 1, Conv, [512, 1, 1]],                     # 26
     [[24, 26], 1, BCAM_TrueSelfAttention_ModalityGated, [512]], # 27
-
+    
     # P3: Simple concat
-    [[4, 14], 1, Concat, [1]], # 28
-    [-1, 1, Conv, [256, 1, 1]], # 29
+    [[4, 14], 1, Concat, [1]],                      # 28
+    [-1, 1, Conv, [256, 1, 1]],                     # 29
   ]
 
-head: [
+head:
+  [
     ######### FPN WITHOUT Semantic Scaling #############
-
+    
     # P5 processing
-    [20, 1, Conv, [512, 1, 1]], # 30
-    [-1, 1, nn.Upsample, [None, 2, "nearest"]], # 31
-
+    [20, 1, Conv, [512, 1, 1]],                     # 30
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 31
+    
     # P4 = P5_up + P4_fused
-    [[31, 27], 1, Concat, [1]], # 32
-    [-1, 3, C3, [512, False]], # 33
-
+    [[31, 27], 1, Concat, [1]],                     # 32
+    [-1, 3, C3, [512, False]],                      # 33
+    
     # P3 WITHOUT semantic scaling (direct FPN)
-    [-1, 1, Conv, [256, 1, 1]], # 34: Project P4
-    [-1, 1, nn.Upsample, [None, 2, "nearest"]], # 35: Upsample
+    [-1, 1, Conv, [256, 1, 1]],                     # 34: Project P4
+    [-1, 1, nn.Upsample, [None, 2, 'nearest']],     # 35: Upsample
     # NO SemanticScale here! Direct concat:
-    [[35, 29], 1, Concat, [1]], # 36: Full P4 guidance
-    [-1, 3, C3, [256, False]], # 37: P3 final
-
+    [[35, 29], 1, Concat, [1]],                     # 36: Full P4 guidance
+    [-1, 3, C3, [256, False]],                      # 37: P3 final
+    
     ######### PAN: Bottom-up #############
-
-    [37, 1, Conv, [256, 3, 2]], # 38
-    [[38, 33], 1, Concat, [1]], # 39
-    [-1, 3, C3, [512, False]], # 40
-
-    [40, 1, Conv, [512, 3, 2]], # 41
-    [[41, 30], 1, Concat, [1]], # 42
-    [-1, 3, C3, [1024, False]], # 43
-
+    
+    [37, 1, Conv, [256, 3, 2]],                     # 38
+    [[38, 33], 1, Concat, [1]],                     # 39
+    [-1, 3, C3, [512, False]],                      # 40
+    
+    [40, 1, Conv, [512, 3, 2]],                     # 41
+    [[41, 30], 1, Concat, [1]],                     # 42
+    [-1, 3, C3, [1024, False]],                     # 43
+    
     # Detection heads
-    [29, 1, ObjectnessHead, [256]],
-    [[37, 40, 43], 1, Detect, [nc, anchors]], # 44
+    [29, 1, ObjectnessHead, [256]],  
+    [[37, 40, 43], 1, Detect, [nc, anchors]],       # 44
   ]
